[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites-Bar/ship.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites-Bar/flag_end.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites-Bar/flag_start.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites-Bar/wave.png" type="Texture" id=4]
[ext_resource path="res://scripts/hud/LevelProgress.gd" type="Script" id=5]
[ext_resource path="res://scripts/hud/HUD.gd" type="Script" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.59874
margin_top = 0.59874
margin_right = 0.598755
margin_bottom = 0.598755
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LevelProgress" type="Control" parent="."]
anchor_right = 1.0
margin_left = 100.0
margin_top = 40.0
margin_right = -100.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Waves" type="TextureRect" parent="LevelProgress"]
anchor_right = 1.0
margin_top = 20.0
margin_right = -14.0
margin_bottom = 26.0
size_flags_horizontal = 3
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Progress" type="HBoxContainer" parent="LevelProgress"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlagStart" type="TextureRect" parent="LevelProgress/Progress"]
margin_right = 14.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
texture = ExtResource( 3 )

[node name="DistanceDone" type="VSeparator" parent="LevelProgress/Progress"]
margin_left = 14.0
margin_right = 394.0
margin_bottom = 26.0
grow_horizontal = 2
size_flags_horizontal = 3
custom_styles/separator = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="LevelProgress/Progress"]
margin_left = 394.0
margin_right = 429.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
custom_constants/margin_bottom = 4

[node name="Ship" type="TextureRect" parent="LevelProgress/Progress/MarginContainer"]
margin_top = 6.0
margin_right = 35.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0
texture = ExtResource( 1 )
stretch_mode = 3

[node name="DistanceLeft" type="VSeparator" parent="LevelProgress/Progress"]
margin_left = 429.0
margin_right = 809.0
margin_bottom = 26.0
grow_horizontal = 2
size_flags_horizontal = 3
custom_styles/separator = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlagEnd" type="TextureRect" parent="LevelProgress/Progress"]
margin_left = 809.0
margin_right = 823.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
texture = ExtResource( 2 )

[node name="WinScreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backfill" type="ColorRect" parent="WinScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.305882, 0.0196078, 0.623529 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="WinScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.5
margin_top = -20.0
margin_right = 53.5
margin_bottom = 20.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WinScreen/VBoxContainer"]
margin_right = 107.0
margin_bottom = 14.0
text = "LEVEL COMPLETE"
align = 1

[node name="BtnReplay" type="Button" parent="WinScreen/VBoxContainer"]
margin_top = 18.0
margin_right = 107.0
margin_bottom = 38.0
text = "Replay"

[node name="BtnMainMenu" type="Button" parent="WinScreen/VBoxContainer"]
margin_top = 42.0
margin_right = 107.0
margin_bottom = 62.0
text = "Back to Menu"

[node name="RoomCounter" type="Label" parent="."]
margin_left = 21.0
margin_top = 48.0
margin_right = 88.0
margin_bottom = 62.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="WinScreen/VBoxContainer/BtnReplay" to="." method="_on_BtnReplay_button_up"]
[connection signal="button_up" from="WinScreen/VBoxContainer/BtnMainMenu" to="." method="_on_BtnMainMenu_button_up"]
